--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3seq.dtx Copyright (C) 1990-2015 The LaTeX3 Project
+%% File: l3seq.dtx Copyright (C) 1990-2016 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -1102,9 +1102,9 @@
 %   lost braces. The second step is solely there to strip
 %   braces which are outermost after space trimming.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \seq_set_split:Nnn
+\cs_new_protected:Npn \seq_set_split:Nnn
   { \@@_set_split:NNnn \tl_set:Nx }
-\cs_new_protected_nopar:Npn \seq_gset_split:Nnn
+\cs_new_protected:Npn \seq_gset_split:Nnn
   { \@@_set_split:NNnn \tl_gset:Nx }
 \cs_new_protected:Npn \@@_set_split:NNnn #1#2#3#4
   {
@@ -1380,9 +1380,9 @@
 %   of \cs{exp_not:n}. The previous calls are cleanly removed
 %   from the stack, and the memory consumption becomes linear.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \seq_reverse:N
+\cs_new_protected:Npn \seq_reverse:N
   { \@@_reverse:NN \tl_set:Nx }
-\cs_new_protected_nopar:Npn \seq_greverse:N
+\cs_new_protected:Npn \seq_greverse:N
   { \@@_reverse:NN \tl_gset:Nx }
 \cs_new_protected:Npn \@@_reverse:NN #1 #2
   {
@@ -1457,7 +1457,7 @@
     \prg_return_false:
     \__prg_break_point:
   }
-\cs_new_nopar:Npn \@@_if_in:
+\cs_new:Npn \@@_if_in:
   { \__prg_break:n { \group_end: \prg_return_true: } }
 \cs_generate_variant:Nn \seq_if_in:NnT  {     NV , Nv , No , Nx }
 \cs_generate_variant:Nn \seq_if_in:NnT  { c , cV , cv , co , cx }
@@ -1529,9 +1529,9 @@
 %   to be redefined. This makes it more sensible to use an auxiliary
 %   function for the local and global cases.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \seq_pop_left:NN
+\cs_new_protected:Npn \seq_pop_left:NN
   { \@@_pop:NNNN \@@_pop_left:NNN \tl_set:Nn }
-\cs_new_protected_nopar:Npn \seq_gpop_left:NN
+\cs_new_protected:Npn \seq_gpop_left:NN
   { \@@_pop:NNNN \@@_pop_left:NNN \tl_gset:Nn }
 \cs_new_protected:Npn \@@_pop_left:NNN #1#2#3
   { \exp_after:wN \@@_pop_left:wnwNNN #2 \q_stop #1#2#3 }
@@ -1599,9 +1599,9 @@
 %   is performed, with an empty argument and \cs{use_none:nn}, which
 %   finally stops the loop.
 %    \begin{macrocode}
-\cs_new_protected_nopar:Npn \seq_pop_right:NN
+\cs_new_protected:Npn \seq_pop_right:NN
   { \@@_pop:NNNN \@@_pop_right:NNN \tl_set:Nx }
-\cs_new_protected_nopar:Npn \seq_gpop_right:NN
+\cs_new_protected:Npn \seq_gpop_right:NN
   { \@@_pop:NNNN \@@_pop_right:NNN \tl_gset:Nx }
 \cs_new_protected:Npn \@@_pop_right:NNN #1#2#3
   {
@@ -1728,9 +1728,9 @@
 %   used to find the end of the code. Any ending code is then inserted
 %   before the return value of \cs{seq_map_break:n} is inserted.
 %    \begin{macrocode}
-\cs_new_nopar:Npn \seq_map_break:
+\cs_new:Npn \seq_map_break:
   { \__prg_map_break:Nn \seq_map_break: { } }
-\cs_new_nopar:Npn \seq_map_break:n
+\cs_new:Npn \seq_map_break:n
   { \__prg_map_break:Nn \seq_map_break: }
 %    \end{macrocode}
 % \end{macro}
@@ -1789,7 +1789,7 @@
     \cs_gset_eq:cN { __prg_map_ \int_use:N \g__prg_map_int :w }
       \@@_item:n
   }
-\cs_new_protected_nopar:Npn \@@_pop_item_def:
+\cs_new_protected:Npn \@@_pop_item_def:
   {
     \cs_gset_eq:Nc \@@_item:n
       { __prg_map_ \int_use:N \g__prg_map_int :w }
