--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -444,8 +444,8 @@
 % \end{function}
 %
 %
-% \begin{function}[added = 2014-07-18]^^A
-%   {^^A
+% \begin{function}[added = 2014-07-18]
+%   {
 %     \seq_reverse:N,  \seq_reverse:c,
 %     \seq_greverse:N, \seq_greverse:c
 %   }
