Make \clist_item:Nn etc evaluate the item number once
This alters the clist, seq and tl item functions.  Instead
of testing the sign of their integer argument and then
evaluating it again, the argument is now evaluated up front.
This will be useful when the argument is random.

--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -1684,7 +1684,7 @@
 % \end{macro}
 %
 % \begin{macro}{\seq_item:Nn, \seq_item:cn}
-% \begin{macro}[aux]{\@@_item:wNn, \@@_item:nnn}
+% \begin{macro}[aux]{\@@_item:wNn, \@@_item:nN, \@@_item:nnn}
 %   The idea here is to find the offset of the item from the left, then use
 %   a loop to grab the correct item. If the resulting offset is too large,
 %   then the stop code |{ ? \__prg_break: } { }| will be used by the auxiliary,
@@ -1695,17 +1695,16 @@
 \cs_new:Npn \@@_item:wNn \s_@@ #1 \q_stop #2#3
   {
     \exp_args:Nf \@@_item:nnn
-      {
-        \int_eval:n
-          {
-            \int_compare:nNnT {#3} < \c_zero
-              { \seq_count:N #2 + \c_one + }
-            #3
-          }
-      }
+      { \exp_args:Nf \@@_item:nN { \int_eval:n {#3} } #2 }
     #1
     { ? \__prg_break: } { }
     \__prg_break_point:
+  }
+\cs_new:Npn \@@_item:nN #1#2
+  {
+    \int_compare:nNnTF {#1} < \c_zero
+      { \int_eval:n { \seq_count:N #2 + \c_one + #1 } }
+      {#1}
   }
 \cs_new:Npn \@@_item:nnn #1#2#3
   {
