--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -858,6 +858,13 @@
 %   Displays the entries in the \meta{sequence} in the terminal.
 % \end{function}
 %
+% \begin{function}[added = 2014-08-12, updated = 2015-08-01]{\seq_log:N, \seq_log:c}
+%   \begin{syntax}
+%     \cs{seq_log:N} \meta{sequence}
+%   \end{syntax}
+%   Writes the entries in the \meta{sequence} in the log file.
+% \end{function}
+%
 % \section{Internal sequence functions}
 %
 % \begin{variable}{\s__seq}
@@ -2004,6 +2011,15 @@
       { \seq_map_function:NN #1 \__msg_show_item:n }
   }
 \cs_generate_variant:Nn \seq_show:N { c }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\seq_log:N, \seq_log:c}
+%   Redirect output of \cs{seq_show:N} to the log.
+%    \begin{macrocode}
+\cs_new_protected:Npn \seq_log:N
+  { \__msg_log_next: \seq_show:N }
+\cs_generate_variant:Nn \seq_log:N { c }
 %    \end{macrocode}
 % \end{macro}
 %
