--- a/l3kernel/l3alloc.dtx
+++ b/l3kernel/l3alloc.dtx
@@ -22,7 +22,6 @@
 %
 %<*driver>
 \documentclass[full]{l3doc}
-\def\ExplFileDate{2017/03/18}
 \begin{document}
   \DocInput{\jobname.dtx}
 \end{document}
@@ -42,7 +41,7 @@
 %    }^^A
 % }
 %
-% \date{Released \ExplFileDate}
+% \date{Released 2017/03/18}
 %
 % \maketitle
 %
