--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -505,7 +505,8 @@
 %   Stores each entry in the \meta{sequence} in turn in the
 %   \meta{tl~var.}\ and applies the \meta{function using tl~var.}
 %   The \meta{function} will usually consist of code making use of
-%   the \meta{tl~var.}, but this is not enforced.  One variable
+%   the \meta{tl~var.}, but this is not enforced.  The assignments to
+%   \meta{tl~var.} are local, and one variable
 %   mapping can be nested inside another. The \meta{items}
 %   are returned from left to right.
 % \end{function}
