--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -1415,10 +1415,8 @@
       \prg_return_false:
     \fi:
   }
-\cs_generate_variant:Nn \seq_if_empty_p:N { c }
-\cs_generate_variant:Nn \seq_if_empty:NT { c }
-\cs_generate_variant:Nn \seq_if_empty:NF { c }
-\cs_generate_variant:Nn \seq_if_empty:NTF { c }
+\prg_generate_conditional_variant:Nnn \seq_if_empty:N
+  { c } { p , T , F , TF }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1457,12 +1455,8 @@
   }
 \cs_new:Npn \@@_if_in:
   { \__prg_break:n { \group_end: \prg_return_true: } }
-\cs_generate_variant:Nn \seq_if_in:NnT  {     NV , Nv , No , Nx }
-\cs_generate_variant:Nn \seq_if_in:NnT  { c , cV , cv , co , cx }
-\cs_generate_variant:Nn \seq_if_in:NnF  {     NV , Nv , No , Nx }
-\cs_generate_variant:Nn \seq_if_in:NnF  { c , cV , cv , co , cx }
-\cs_generate_variant:Nn \seq_if_in:NnTF {     NV , Nv , No , Nx }
-\cs_generate_variant:Nn \seq_if_in:NnTF { c , cV , cv , co , cx }
+\prg_generate_conditional_variant:Nnn \seq_if_in:Nn
+  { NV , Nv , No , Nx , c , cV , cv , co , cx } { T , F , TF }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1638,12 +1632,10 @@
   { \@@_pop_TF:NNNN \prg_do_nothing: \seq_get_left:NN #1#2 }
 \prg_new_protected_conditional:Npnn \seq_get_right:NN #1#2 { T , F , TF }
   { \@@_pop_TF:NNNN \prg_do_nothing: \seq_get_right:NN #1#2 }
-\cs_generate_variant:Nn \seq_get_left:NNT   { c }
-\cs_generate_variant:Nn \seq_get_left:NNF   { c }
-\cs_generate_variant:Nn \seq_get_left:NNTF  { c }
-\cs_generate_variant:Nn \seq_get_right:NNT  { c }
-\cs_generate_variant:Nn \seq_get_right:NNF  { c }
-\cs_generate_variant:Nn \seq_get_right:NNTF { c }
+\prg_generate_conditional_variant:Nnn \seq_get_left:NN
+  { c } { T , F , TF }
+\prg_generate_conditional_variant:Nnn \seq_get_right:NN
+  { c } { T , F , TF }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -1662,18 +1654,10 @@
   { \@@_pop_TF:NNNN \@@_pop_right:NNN \tl_set:Nx #1 #2 }
 \prg_new_protected_conditional:Npnn \seq_gpop_right:NN #1#2 { T , F , TF }
   { \@@_pop_TF:NNNN \@@_pop_right:NNN \tl_gset:Nx #1 #2 }
-\cs_generate_variant:Nn \seq_pop_left:NNT    { c }
-\cs_generate_variant:Nn \seq_pop_left:NNF    { c }
-\cs_generate_variant:Nn \seq_pop_left:NNTF   { c }
-\cs_generate_variant:Nn \seq_gpop_left:NNT   { c }
-\cs_generate_variant:Nn \seq_gpop_left:NNF   { c }
-\cs_generate_variant:Nn \seq_gpop_left:NNTF  { c }
-\cs_generate_variant:Nn \seq_pop_right:NNT   { c }
-\cs_generate_variant:Nn \seq_pop_right:NNF   { c }
-\cs_generate_variant:Nn \seq_pop_right:NNTF  { c }
-\cs_generate_variant:Nn \seq_gpop_right:NNT  { c }
-\cs_generate_variant:Nn \seq_gpop_right:NNF  { c }
-\cs_generate_variant:Nn \seq_gpop_right:NNTF { c }
+\prg_generate_conditional_variant:Nnn \seq_pop_left:NN { c } { T , F , TF }
+\prg_generate_conditional_variant:Nnn \seq_gpop_left:NN { c } { T , F , TF }
+\prg_generate_conditional_variant:Nnn \seq_pop_right:NN { c } { T , F , TF }
+\prg_generate_conditional_variant:Nnn \seq_gpop_right:NN { c } { T , F , TF }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
