--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -735,7 +735,7 @@
 % implement sets, one should be careful not to rely on the order of
 % items in the sequence representing the set.
 %
-% Sets should not contain several occurences of a given item.  To make
+% Sets should not contain several occurrences of a given item.  To make
 % sure that a \meta{sequence variable} only has distinct items, use
 % \cs{seq_remove_duplicates:N} \meta{sequence variable}.  This function
 % is relatively slow, and to avoid performance issues one should only
