--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3seq.dtx Copyright (C) 1990-2017 The LaTeX3 Project
+%% File: l3seq.dtx Copyright (C) 1990-2018 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -1766,15 +1766,15 @@
   }
 \cs_new_protected:Npn \@@_push_item_def:
   {
-    \int_gincr:N \g__prg_map_int
-    \cs_gset_eq:cN { @@_map_ \int_use:N \g__prg_map_int :w }
+    \int_gincr:N \g__kernel_prg_map_int
+    \cs_gset_eq:cN { @@_map_ \int_use:N \g__kernel_prg_map_int :w }
       \@@_item:n
   }
 \cs_new_protected:Npn \@@_pop_item_def:
   {
     \cs_gset_eq:Nc \@@_item:n
-      { @@_map_ \int_use:N \g__prg_map_int :w }
-    \int_gdecr:N \g__prg_map_int
+      { @@_map_ \int_use:N \g__kernel_prg_map_int :w }
+    \int_gdecr:N \g__kernel_prg_map_int
   }
 %    \end{macrocode}
 % \end{macro}
