--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -1983,7 +1983,7 @@
 \cs_generate_variant:Nn \seq_log:N { c }
 \cs_new_protected:Npn \@@_show:NN #1#2
   {
-    \__kernel_check_defined:NT #2
+    \__kernel_chk_defined:NT #2
       {
         #1 { LaTeX/kernel } { show-seq }
           { \token_to_str:N #2 }
