--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -1642,18 +1642,26 @@
 % \begin{macro}[TF]{\seq_gpop_right:NN, \seq_gpop_right:cN}
 %   More or less the same for popping.
 %    \begin{macrocode}
-\prg_new_protected_conditional:Npnn \seq_pop_left:NN #1#2 { T , F , TF }
+\prg_new_protected_conditional:Npnn \seq_pop_left:NN #1#2
+  { T , F , TF }
   { \@@_pop_TF:NNNN \@@_pop_left:NNN \tl_set:Nn #1 #2 }
-\prg_new_protected_conditional:Npnn \seq_gpop_left:NN #1#2 { T , F , TF }
+\prg_new_protected_conditional:Npnn \seq_gpop_left:NN #1#2
+  { T , F , TF }
   { \@@_pop_TF:NNNN \@@_pop_left:NNN \tl_gset:Nn #1 #2 }
-\prg_new_protected_conditional:Npnn \seq_pop_right:NN #1#2 { T , F , TF }
+\prg_new_protected_conditional:Npnn \seq_pop_right:NN #1#2
+  { T , F , TF }
   { \@@_pop_TF:NNNN \@@_pop_right:NNN \tl_set:Nx #1 #2 }
-\prg_new_protected_conditional:Npnn \seq_gpop_right:NN #1#2 { T , F , TF }
+\prg_new_protected_conditional:Npnn \seq_gpop_right:NN #1#2
+  { T , F , TF }
   { \@@_pop_TF:NNNN \@@_pop_right:NNN \tl_gset:Nx #1 #2 }
-\prg_generate_conditional_variant:Nnn \seq_pop_left:NN { c } { T , F , TF }
-\prg_generate_conditional_variant:Nnn \seq_gpop_left:NN { c } { T , F , TF }
-\prg_generate_conditional_variant:Nnn \seq_pop_right:NN { c } { T , F , TF }
-\prg_generate_conditional_variant:Nnn \seq_gpop_right:NN { c } { T , F , TF }
+\prg_generate_conditional_variant:Nnn \seq_pop_left:NN { c }
+  { T , F , TF }
+\prg_generate_conditional_variant:Nnn \seq_gpop_left:NN { c }
+  { T , F , TF }
+\prg_generate_conditional_variant:Nnn \seq_pop_right:NN { c }
+  { T , F , TF }
+\prg_generate_conditional_variant:Nnn \seq_gpop_right:NN { c }
+  { T , F , TF }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
