--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -1725,26 +1725,26 @@
 % \UnitTested
 % \begin{macro}[rEXP]{\@@_map_function:NNn}
 %   The idea here is to apply the code of |#2| to each item in the
-%   sequence without altering the definition of \cs{@@_item:n}. This
-%   is done as by noting that every odd token in the sequence must be
-%   \cs{@@_item:n}, which can be gobbled by \cs{use_none:n}. At the end of
-%   the loop, |#2| is instead |? \seq_map_break:|, which therefore breaks the
-%   loop without needing to do a (relatively-expensive) quark test.
+%   sequence without altering the definition of \cs{@@_item:n}.  The
+%   argument delimited by \cs{@@_item:n} is almost always empty, except
+%   at the end of the loop where it is \cs{prg_break:}.  This allows to
+%   break the loop without needing to do a (relatively-expensive) quark
+%   test.
 %    \begin{macrocode}
 \cs_new:Npn \seq_map_function:NN #1#2
   {
     \exp_after:wN \use_i_ii:nnn
-    \exp_after:wN \@@_map_function:NNn
+    \exp_after:wN \@@_map_function:Nw
     \exp_after:wN #2
     #1
-    { ? \seq_map_break: } { }
+    \prg_break: \@@_item:n { } \prg_break_point:
     \prg_break_point:Nn \seq_map_break: { }
   }
-\cs_new:Npn \@@_map_function:NNn #1#2#3
+\cs_new:Npn \@@_map_function:Nw #1#2 \@@_item:n #3
   {
-    \use_none:n #2
+    #2
     #1 {#3}
-    \@@_map_function:NNn #1
+    \@@_map_function:Nw #1
   }
 \cs_generate_variant:Nn \seq_map_function:NN { c }
 %    \end{macrocode}
