Speed up \seq_get_right:NN and \seq_item:Nn slightly

--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -1538,30 +1538,29 @@
 %
 % \begin{macro}{\seq_get_right:NN, \seq_get_right:cN}
 % \UnitTested
-% \begin{macro}{\@@_get_right_loop:nn}
-%   First remove \cs{s_@@} and prepend \cs{q_no_value}, then take two
-%   arguments at a time.  Before the right-hand end of the sequence,
-%   this is a brace group followed by \cs{@@_item:n}, both removed by
-%   \cs{use_none:nn}.  At the end of the sequence, the two question
-%   marks are taken by \cs{use_none:nn}, and the assignment is placed
-%   before the right-most item.  In the next iteration,
-%   \cs{@@_get_right_loop:nn} receives two empty arguments, and
-%   \cs{use_none:nn} stops the loop.
+% \begin{macro}[EXP]{\@@_get_right_loop:nw, \@@_get_right_end:NnN}
+%   First remove \cs{s_@@} and prepend \cs{q_no_value}.  The first
+%   argument of \cs{@@_get_right_loop:nw} is the last item found, and
+%   the second argument is empty until the end of the loop, where it is
+%   code that applies \cs{exp_not:n} to the last item and ends the loop.
 %    \begin{macrocode}
 \cs_new_protected:Npn \seq_get_right:NN #1#2
   {
-    \exp_after:wN \use_i_ii:nnn
-    \exp_after:wN \@@_get_right_loop:nn
-    \exp_after:wN \q_no_value
-    #1
-    { ?? \tl_set:Nn #2 }
-    { } { }
+    \tl_set:Nx #2
+      {
+        \exp_after:wN \use_i_ii:nnn
+        \exp_after:wN \@@_get_right_loop:nw
+        \exp_after:wN \q_no_value
+        #1
+        \@@_get_right_end:NnN \@@_item:n
+      }
   }
-\cs_new_protected:Npn \@@_get_right_loop:nn #1#2
+\cs_new:Npn \@@_get_right_loop:nw #1#2 \@@_item:n
   {
-    \use_none:nn #2 {#1}
-    \@@_get_right_loop:nn
+    #2 \use_none:n {#1}
+    \@@_get_right_loop:nw
   }
+\cs_new:Npn \@@_get_right_end:NnN #1#2#3 { \exp_not:n {#2} }
 \cs_generate_variant:Nn \seq_get_right:NN { c }
 %    \end{macrocode}
 % \end{macro}
@@ -1669,20 +1668,20 @@
 % \end{macro}
 %
 % \begin{macro}{\seq_item:Nn, \seq_item:cn}
-% \begin{macro}{\@@_item:wNn, \@@_item:nN, \@@_item:nnn}
+% \begin{macro}{\@@_item:wNn, \@@_item:nN, \@@_item:nwn}
 %   The idea here is to find the offset of the item from the left, then use
 %   a loop to grab the correct item. If the resulting offset is too large,
-%   then the stop code |{ ? \prg_break: } { }| is used by the auxiliary,
-%   terminating the loop and returning nothing at all.
+%   then the argument delimited by \cs{@@_item:n} is \cs{prg_break:} instead
+%   of being empty, terminating the loop and returning nothing at all.
 %    \begin{macrocode}
 \cs_new:Npn \seq_item:Nn #1
   { \exp_after:wN \@@_item:wNn #1 \q_stop #1 }
 \cs_new:Npn \@@_item:wNn \s_@@ #1 \q_stop #2#3
   {
-    \exp_args:Nf \@@_item:nnn
+    \exp_args:Nf \@@_item:nwn
       { \exp_args:Nf \@@_item:nN { \int_eval:n {#3} } #2 }
     #1
-    { ? \prg_break: } { }
+    \prg_break: \@@_item:n { }
     \prg_break_point:
   }
 \cs_new:Npn \@@_item:nN #1#2
@@ -1691,12 +1690,12 @@
       { \int_eval:n { \seq_count:N #2 + 1 + #1 } }
       {#1}
   }
-\cs_new:Npn \@@_item:nnn #1#2#3
+\cs_new:Npn \@@_item:nwn #1#2 \@@_item:n #3
   {
-    \use_none:n #2
+    #2
     \int_compare:nNnTF {#1} = 1
       { \prg_break:n { \exp_not:n {#3} } }
-      { \exp_args:Nf \@@_item:nnn { \int_eval:n { #1 - 1 } } }
+      { \exp_args:Nf \@@_item:nwn { \int_eval:n { #1 - 1 } } }
   }
 \cs_generate_variant:Nn \seq_item:Nn { c }
 %    \end{macrocode}
