Missing (meta) token list variable added

--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -594,7 +594,7 @@
 %
 % \begin{function}[EXP, added = 2013-05-26]{\seq_use:Nnnn, \seq_use:cnnn}
 %   \begin{syntax}
-%     \cs{seq_use:Nnnn} \meta{seq~var} \Arg{separator~between~two} \Arg{separator~between~more~than~two} \Arg{separator~between~final~two}
+%     \cs{seq_use:Nnnn} \meta{seq~var} \meta{token list variable} \Arg{separator~between~two} \Arg{separator~between~more~than~two} \Arg{separator~between~final~two}
 %   \end{syntax}
 %   Places the contents of the \meta{seq~var} in the input stream, with
 %   the appropriate \meta{separator} between the items.  Namely, if the
@@ -625,7 +625,7 @@
 %
 % \begin{function}[EXP, added = 2013-05-26]{\seq_use:Nn, \seq_use:cn}
 %   \begin{syntax}
-%     \cs{seq_use:Nn} \meta{seq~var} \Arg{separator}
+%     \cs{seq_use:Nn} \meta{seq~var} \meta{token list variable} \Arg{separator}
 %   \end{syntax}
 %   Places the contents of the \meta{seq~var} in the input stream, with
 %   the \meta{separator} between the items.  If the sequence has
