--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -486,6 +486,10 @@
 %
 % \section{Mapping to sequences}
 %
+% All mappings are done at the current group level, \emph{i.e.}~any
+% local assignments made by the \meta{function} or \meta{code} discussed
+% below remain in effect after the loop.
+%
 % \begin{function}[rEXP, updated = 2012-06-29]
 %   {\seq_map_function:NN, \seq_map_function:cN}
 %   \begin{syntax}
