--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -525,7 +525,9 @@
 %   Stores each \meta{item} of the \meta{sequence} in turn in the (token
 %   list) \meta{variable} and applies the \meta{code}.  The \meta{code}
 %   will usually make use of the \meta{variable}, but this is not
-%   enforced.  The assignments to the \meta{variable} are local.  The
+%   enforced.  The assignments to the \meta{variable} are local.  Its
+%   value after the loop is the last \meta{item} in the \meta{sequence},
+%   or its original value if the \meta{sequence} is empty.  The
 %   \meta{items} are returned from left to right.
 % \end{function}
 %
