--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -1835,6 +1835,31 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}{\seq_map_tokens:Nn, \seq_map_tokens:cn}
+% \begin{macro}{\@@_map_tokens:nw}
+%   This is based on the function mapping but using the same tricks as
+%   described for \cs{prop_map_tokens:Nn}. The idea is to remove the leading
+%   \cs{@@_item:n} and apply the tokens such that they are safe with the
+%   break points, hence the \cs{use:n}.
+%    \begin{macrocode}
+\cs_new:Npn \seq_map_tokens:Nn #1#2
+  {
+    \exp_last_unbraced:Nno
+      \use_i:nn { \@@_map_tokens:nw {#2} } #1
+    \prg_break: \@@_item:n { } \prg_break_point:
+    \prg_break_point:Nn \seq_map_break: { }
+  }
+\cs_generate_variant:Nn \seq_map_tokens:Nn { c }
+\cs_new:Npn \@@_map_tokens:nw #1#2 \@@_item:n #3
+  {
+    #2
+    \use:n {#1} {#3}
+    \@@_map_tokens:nw {#1}
+  }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+%
 % \begin{macro}
 %   {
 %     \seq_map_variable:NNn, \seq_map_variable:Ncn,
