--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -498,6 +498,8 @@
 %   Applies \meta{function} to every \meta{item} stored in the
 %   \meta{sequence}. The \meta{function} will receive one argument for
 %   each iteration. The \meta{items} are returned from left to right.
+%   To pass further arguments to the \meta{function}, see
+%   \cs{seq_map_tokens:Nn}.
 %   The function \cs{seq_map_inline:Nn} is faster than
 %   \cs{seq_map_function:NN} for sequences with more than about~$10$
 %   items.
@@ -512,6 +514,23 @@
 %   within the \meta{sequence}. The \meta{inline function} should
 %   consist of code which will receive the \meta{item} as |#1|.
 %   The \meta{items} are returned from left to right.
+% \end{function}
+%
+% \begin{function}[rEXP, added = 2019-08-30]
+%   {\seq_map_tokens:Nn, \seq_map_tokens:cn}
+%   \begin{syntax}
+%     \cs{seq_map_tokens:Nn} \meta{sequence} \Arg{code}
+%   \end{syntax}
+%   Analogue of \cs{seq_map_function:NN} which maps several tokens
+%   instead of a single function.  The \meta{code} receives each item in
+%   the \meta{sequence} as two trailing brace groups. For instance,
+%   \begin{verbatim}
+%     \seq_map_tokens:Nn \l_my_seq { \prg_replicate:nn { 2 } }
+%   \end{verbatim}
+%   expands to twice each item in the \meta{sequence}: for each item in
+%   |\l_my_seq| the function \cs{prg_replicate:nn} receives |2| and
+%   \meta{item} as its two arguments.  The function
+%   \cs{seq_map_inline:Nn} is typically faster but is not expandable.
 % \end{function}
 %
 % \begin{function}[updated = 2012-06-29]
@@ -1839,7 +1858,7 @@
 % \begin{macro}{\@@_map_tokens:nw}
 %   This is based on the function mapping but using the same tricks as
 %   described for \cs{prop_map_tokens:Nn}. The idea is to remove the leading
-%   \cs{@@_item:n} and apply the tokens such that they are safe with the
+%   \cs{s_@@} and apply the tokens such that they are safe with the
 %   break points, hence the \cs{use:n}.
 %    \begin{macrocode}
 \cs_new:Npn \seq_map_tokens:Nn #1#2
