--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -114,6 +114,16 @@
 %   the original \meta{comma list} is unchanged.
 % \end{function}
 %
+% \begin{function}[added = 2017-11-28]
+%   {\seq_const_from_clist:Nn,  \seq_const_from_clist:cn}
+%   \begin{syntax}
+%     \cs{seq_const_from_clist:Nn} \meta{seq~var} \Arg{comma-list}
+%   \end{syntax}
+%   Creates a new constant \meta{seq~var} or raises an error if the name
+%   is already taken. The \meta{seq~var} is set globally to contain the
+%   items in the \meta{comma list}.
+% \end{function}
+%
 % \begin{function}[added = 2011-08-15, updated = 2012-07-02]
 %   {
 %     \seq_set_split:Nnn , \seq_set_split:NnV ,
@@ -1119,6 +1129,18 @@
 \cs_generate_variant:Nn \seq_gset_from_clist:Nn { c      }
 %    \end{macrocode}
 % \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\seq_const_from_clist:Nn, \seq_const_from_clist:cn}
+%   Almost identical to \cs{seq_set_from_clist:Nn}.
+%    \begin{macrocode}
+\cs_new_protected:Npn \seq_const_from_clist:Nn #1#2
+  {
+    \tl_const:Nx #1
+      { \s_@@ \clist_map_function:nN {#2} \@@_wrap_item:n }
+  }
+\cs_generate_variant:Nn \seq_const_from_clist:Nn { c }
+%    \end{macrocode}
 % \end{macro}
 %
 % \begin{macro}
