--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -578,9 +578,9 @@
 %   \meta{items} are returned from left to right.
 % \end{function}
 %
-% \begin{function}[rEXP,added = 2018-05-03]{\seq_indexed_map_function:NN}
+% \begin{function}[rEXP,added = 2018-05-03]{\seq_map_indexed_function:NN}
 %   \begin{syntax}
-%     \cs{seq_indexed_map_function:NN} \meta{seq~var} \meta{function}
+%     \cs{seq_map_indexed_function:NN} \meta{seq~var} \meta{function}
 %   \end{syntax}
 %   Applies \meta{function} to every entry in the \meta{sequence
 %   variable}.  The \meta{function} should have signature |:nn|.  It
@@ -588,9 +588,9 @@
 %   |1| for the first entry, then |2| and so on) and the \meta{item}.
 % \end{function}
 %
-% \begin{function}[added = 2018-05-03]{\seq_indexed_map_inline:Nn}
+% \begin{function}[added = 2018-05-03]{\seq_map_indexed_inline:Nn}
 %   \begin{syntax}
-%     \cs{seq_indexed_map_inline:Nn} \meta{seq~var} \Arg{inline function}
+%     \cs{seq_map_indexed_inline:Nn} \meta{seq~var} \Arg{inline function}
 %   \end{syntax}
 %   Applies \meta{inline function} to every entry in the \meta{sequence
 %   variable}.  The \meta{inline function} should consist of code which
@@ -2040,30 +2040,30 @@
 %
 % \begin{macro}
 %   {
-%     \seq_indexed_map_function:NN, \seq_indexed_map_inline:Nn,
-%     \@@_indexed_map:nNN, \@@_indexed_map:Nw
+%     \seq_map_indexed_function:NN, \seq_map_indexed_inline:Nn,
+%     \@@_map_indexed:nNN, \@@_map_indexed:Nw
 %   }
 %   Similar to \cs{seq_map_function:NN} but we keep track of the item
-%   index as a |;|-delimited argument of \cs{@@_indexed_map:Nw}.
+%   index as a |;|-delimited argument of \cs{@@_map_indexed:Nw}.
 %    \begin{macrocode}
-\cs_new:Npn \seq_indexed_map_function:NN #1#2
+\cs_new:Npn \seq_map_indexed_function:NN #1#2
   {
-    \@@_indexed_map:NN #1#2
+    \@@_map_indexed:NN #1#2
     \prg_break_point:Nn \seq_map_break: { }
   }
-\cs_new_protected:Npn \seq_indexed_map_inline:Nn #1#2
+\cs_new_protected:Npn \seq_map_indexed_inline:Nn #1#2
   {
     \int_gincr:N \g__kernel_prg_map_int
     \cs_gset_protected:cpn
       { @@_map_ \int_use:N \g__kernel_prg_map_int :w } ##1##2 {#2}
-    \exp_args:NNc \@@_indexed_map:NN #1
+    \exp_args:NNc \@@_map_indexed:NN #1
       { @@_map_ \int_use:N \g__kernel_prg_map_int :w }
     \prg_break_point:Nn \seq_map_break:
       { \int_gdecr:N \g__kernel_prg_map_int }
   }
-\cs_new:Npn \@@_indexed_map:NN #1#2
+\cs_new:Npn \@@_map_indexed:NN #1#2
   {
-    \exp_after:wN \@@_indexed_map:Nw
+    \exp_after:wN \@@_map_indexed:Nw
     \exp_after:wN #2
     \int_value:w 1
     \exp_after:wN \use_i:nn
@@ -2071,11 +2071,11 @@
     #1
     \prg_break: \@@_item:n { } \prg_break_point:
   }
-\cs_new:Npn \@@_indexed_map:Nw #1#2 ; #3 \@@_item:n #4
+\cs_new:Npn \@@_map_indexed:Nw #1#2 ; #3 \@@_item:n #4
   {
     #3
     #1 {#2} {#4}
-    \exp_after:wN \@@_indexed_map:Nw
+    \exp_after:wN \@@_map_indexed:Nw
     \exp_after:wN #1
     \int_value:w \int_eval:w 1 + #2 ;
   }
