--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -1054,7 +1054,7 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_item:n
   {
-    \__kernel_msg_expandable_error:nn { kernel } { misused-sequence }
+    \__kernel_msg_expandable_error:nn { seq } { misused-sequence }
     \use_none:n
   }
 %    \end{macrocode}
@@ -1582,7 +1582,7 @@
       {
         \int_compare:nNnTF { \seq_count:N #2 } > \c_max_register_int
           {
-            \__kernel_msg_error:nnx { kernel } { shuffle-too-large }
+            \__kernel_msg_error:nnx { seq } { shuffle-too-large }
               { \token_to_str:N #2 }
           }
           {
@@ -2335,7 +2335,7 @@
   {
     \__kernel_chk_defined:NT #2
       {
-        #1 { LaTeX/kernel } { show-seq }
+        #1 { LaTeX / seq } { show }
           { \token_to_str:N #2 }
           { \seq_map_function:NN #2 \msg_show_item:n }
           { } { }
