--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -2327,15 +2327,15 @@
 % \UnitTested
 %   Apply the general \cs{msg_show:nnnnnn}.
 %    \begin{macrocode}
-\cs_new_protected:Npn \seq_show:N { \@@_show:NN \msg_show:nnxxxx }
+\cs_new_protected:Npn \seq_show:N { \@@_show:NN \__kernel_msg_show:nnxxxx }
 \cs_generate_variant:Nn \seq_show:N { c }
-\cs_new_protected:Npn \seq_log:N { \@@_show:NN \msg_log:nnxxxx }
+\cs_new_protected:Npn \seq_log:N { \@@_show:NN \__kernel_msg_log:nnxxxx }
 \cs_generate_variant:Nn \seq_log:N { c }
 \cs_new_protected:Npn \@@_show:NN #1#2
   {
     \__kernel_chk_defined:NT #2
       {
-        #1 { LaTeX / seq } { show }
+        #1 { seq } { show }
           { \token_to_str:N #2 }
           { \seq_map_function:NN #2 \msg_show_item:n }
           { } { }
