--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -1054,7 +1054,7 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_item:n
   {
-    \__kernel_msg_expandable_error:nn { seq } { misused-sequence }
+    \__kernel_msg_expandable_error:nn { seq } { misused }
     \use_none:n
   }
 %    \end{macrocode}
