--- a/l3kernel/l3seq.dtx
+++ b/l3kernel/l3seq.dtx
@@ -988,14 +988,14 @@
 %
 % \section{Viewing sequences}
 %
-% \begin{function}[updated = 2015-08-01]{\seq_show:N, \seq_show:c}
+% \begin{function}[updated = 2021-04-29]{\seq_show:N, \seq_show:c}
 %   \begin{syntax}
 %     \cs{seq_show:N} \meta{sequence}
 %   \end{syntax}
 %   Displays the entries in the \meta{sequence} in the terminal.
 % \end{function}
 %
-% \begin{function}[added = 2014-08-12, updated = 2015-08-01]{\seq_log:N, \seq_log:c}
+% \begin{function}[added = 2014-08-12, updated = 2021-04-29]{\seq_log:N, \seq_log:c}
 %   \begin{syntax}
 %     \cs{seq_log:N} \meta{sequence}
 %   \end{syntax}
@@ -2359,8 +2359,9 @@
 % \subsection{Viewing sequences}
 %
 % \begin{macro}{\seq_show:N, \seq_show:c, \seq_log:N, \seq_log:c, \@@_show:NN}
+% \begin{macro}[rEXP]{\@@_show_validate:nn}
 % \UnitTested
-%   Apply the general \cs{msg_show:nnnnnn}.
+%   Apply the general \cs{__kernel_chk_tl_type:NnnT}.
 %    \begin{macrocode}
 \cs_new_protected:Npn \seq_show:N { \@@_show:NN \__kernel_msg_show:nnxxxx }
 \cs_generate_variant:Nn \seq_show:N { c }
@@ -2368,7 +2369,12 @@
 \cs_generate_variant:Nn \seq_log:N { c }
 \cs_new_protected:Npn \@@_show:NN #1#2
   {
-    \__kernel_chk_defined:NT #2
+    \__kernel_chk_tl_type:NnnT #2 { seq }
+      {
+        \s_@@
+        \exp_after:wN \use_i:nn \exp_after:wN \@@_show_validate:nn #2
+        \q_recursion_tail \q_recursion_tail \q_recursion_stop
+      }
       {
         #1 { seq } { show }
           { \token_to_str:N #2 }
@@ -2376,7 +2382,14 @@
           { } { }
       }
   }
+\cs_new:Npn \@@_show_validate:nn #1#2
+  {
+    \quark_if_recursion_tail_stop:n {#2}
+    \@@_wrap_item:n {#2}
+    \@@_show_validate:nn
+  }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \subsection{Scratch sequences}
